Add obfuscation support

--- a/.gitignore
+++ b/.gitignore
@@ -78,3 +78,5 @@ docs/_build
 #==============================================================================#
 bindings/go/llvm/llvm_config.go
 bindings/go/llvm/workdir
+
+lib/Obfuscation
